[gd_scene load_steps=3 format=3 uid="uid://b1ye0d5616se3"]

[ext_resource type="Script" path="res://scripts/interface/layout_editor.gd" id="1_j8ovd"]
[ext_resource type="PackedScene" uid="uid://cggpwmrb7es3e" path="res://scenes/interface/grid_button.tscn" id="2_uexij"]

[node name="MainGrid" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="LayoutEditorContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
script = ExtResource("1_j8ovd")

[node name="ColumnEditorContainer" type="HBoxContainer" parent="VBoxContainer/LayoutEditorContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/LayoutEditorContainer/ColumnEditorContainer"]
layout_mode = 2
text = "COLUMNS"

[node name="RemoveColumnButton" type="Button" parent="VBoxContainer/LayoutEditorContainer/ColumnEditorContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "NIX-"

[node name="AddColumnButton" type="Button" parent="VBoxContainer/LayoutEditorContainer/ColumnEditorContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ADD+"

[node name="LockColumnsButton" type="CheckButton" parent="VBoxContainer/LayoutEditorContainer/ColumnEditorContainer"]
layout_mode = 2
text = "LOCK"

[node name="RowEditorContainer" type="HBoxContainer" parent="VBoxContainer/LayoutEditorContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/LayoutEditorContainer/RowEditorContainer"]
layout_mode = 2
text = "ROWS"

[node name="RemoveRowButton" type="Button" parent="VBoxContainer/LayoutEditorContainer/RowEditorContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "NIX-"

[node name="AddRowButton" type="Button" parent="VBoxContainer/LayoutEditorContainer/RowEditorContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ADD+"

[node name="LockRowsButton" type="CheckButton" parent="VBoxContainer/LayoutEditorContainer/RowEditorContainer"]
layout_mode = 2
text = "LOCK"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/LayoutEditorContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LayoutSelectorContainer" type="HBoxContainer" parent="VBoxContainer/LayoutEditorContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveLayoutButton" type="Button" parent="VBoxContainer/LayoutEditorContainer/LayoutSelectorContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SAVE"

[node name="LoadLayoutButton" type="OptionButton" parent="VBoxContainer/LayoutEditorContainer/LayoutSelectorContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="GridButton" parent="VBoxContainer/GridContainer" instance=ExtResource("2_uexij")]
layout_mode = 2
